--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Yuan Xue Lim
 email: joelimyx@gmail.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+url: https://joelimyx.com
+description: "Yuan Xue Lim Portfolio, Android Developer. Joelimyx"
+skills: "Android Developer | Traveler"
 meta_author: Lim Yuan Xue
 
 # Google webmaster tools
@@ -24,9 +24,9 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
+  primary: FF0029A3 #80B3FF
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
+  secondary: FF00A6F2 #FD6E8A
   secondary-dark: 233140 #A2122F
 
 # Footer settings
@@ -45,7 +45,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: New York, NY 
+  - line: New York, NY
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
