--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ color:
   primary: FF0029A3 #80B3FF
   primary-rgb: "24,288,156" #"128,179,255"
   secondary: FF00A6F2 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  secondary-dark: FF0029A3 #A2122F
 
 # Footer settings
 footer:
