--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: FF0029A3 #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: FF00A6F2 #FD6E8A
-  secondary-dark: FF0029A3 #A2122F
+  primary: 009FD9 #80B3FF
+  primary-rgb: "0,159,217" #"128,179,255"
+  secondary: 2c3e50 #FD6E8A
+  secondary-dark: 233140 #A2122F
 
 # Footer settings
 footer:
