--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: joelimyx@gmail.com
 url: https://joelimyx.com
 description: "Yuan Xue Lim Portfolio, Android Developer. Joelimyx"
 skills: "Android Developer | Traveler"
-meta_author: Lim Yuan Xue
+meta_author: Yuan Xue Lim
 
 # Google webmaster tools
 google_verify:
